--- a/index.html
+++ b/index.html
@@ -10,37 +10,35 @@
 </head>
 <body>
     <div class="calc-container">
-        <div class="display">
-            0
+        <div class="display">0</div>
+        <div class="button-row">
+            <button id="clear" class="operator-secondary">AC</button>
+            <button id="sign" class="operator-secondary">+/-</button>
+            <button id="percent" class="operator-secondary">%</button>
+            <button id="divide" class="operator">÷</button>
         </div>
         <div class="button-row">
-            <button class="operator-secondary">AC</button>
-            <button class="operator-secondary">+/-</button>
-            <button class="operator-secondary">%</button>
-            <button class="operator">÷</button>
+            <button id="seven" class="number">7</button>
+            <button id="eight" class="number">8</button>
+            <button id="nine" class="number">9</button>
+            <button id="multiply" class="operator">×</button>
         </div>
         <div class="button-row">
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-            <button class="operator">×</button>
+            <button id="four" class="number">4</button>
+            <button id="five" class="number">5</button>
+            <button id="six" class="number">6</button>
+            <button id="subtract" class="operator">-</button>
         </div>
         <div class="button-row">
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="operator">-</button>
+            <button id="one" class="number">1</button>
+            <button id="two" class="number">2</button>
+            <button id="three" class="number">3</button>
+            <button id="add" class="operator">+</button>
         </div>
         <div class="button-row">
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="operator">+</button>
-        </div>
-        <div class="button-row">
-            <button class="number bigger">0</button>
-            <button class="number">.</button>
-            <button class="operator">=</button>
+            <button id="zero" class="number bigger">0</button>
+            <button id="decimal" class="decimal">.</button>
+            <button id="equals" class="operator">=</button>
 
         </div>
 
