Change clear button name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="calc-container">
         <div class="display">0</div>
         <div class="button-row">
-            <button id="clear" class="operator-secondary">AC</button>
+            <button id="all-clear" class="operator-secondary">AC</button>
             <button id="sign" class="operator-secondary">+/-</button>
             <button id="percent" class="operator-secondary">%</button>
             <button id="divide" class="operator">÷</button>
